force-app/main/default/objects/Client_Intake__c/Client_Intake__c.object-meta.xml
<CustomObject>
    <label>Client Intake</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Client Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>