force-app/main/default/objects/Client_Intake__c/fields/Appointment_Accommodations_Specify__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Accommodations_Specify__c</fullName>
    <label>Appointment Accommodations Specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>