force-app/main/default/objects/Client_Intake__c/fields/Aware_Of_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Aware_Of_Conflicts__c</fullName>
    <label>Aware of conflicts of interest?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>