force-app/main/default/objects/Client_Intake__c/fields/BUS_Contract_Draft_Has_Revision__c.field-meta.xml
<CustomField>
    <fullName>BUS_Contract_Draft_Has_Revision__c</fullName>
    <label>BUS: Contract Drafting - Have...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>