force-app/main/default/objects/Client_Intake__c/fields/BUS_Contract_Draft_Type__c.field-meta.xml
<CustomField>
    <fullName>BUS_Contract_Draft_Type__c</fullName>
    <label>BUS: Contract Drafting - Type of...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Services Agreement</fullName>
            </value>
            <value>
                <fullName>Employment Agreement</fullName>
            </value>
            <value>
                <fullName>Settlement Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>