force-app/main/default/objects/Client_Intake__c/fields/BUS_Contract_Draft_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>BUS_Contract_Draft_Type_Other__c</fullName>
    <label>BUS: Contract Drafting - Type Other...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>