force-app/main/default/objects/Client_Intake__c/fields/BUS_Create_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>BUS_Create_Business_Type__c</fullName>
    <label>BUS: Creation - Type of Business to...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>