force-app/main/default/objects/Client_Intake__c/fields/BUS_Create_Desired_Name__c.field-meta.xml
<CustomField>
    <fullName>BUS_Create_Desired_Name__c</fullName>
    <label>BUS: Creation - Desired Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>