force-app/main/default/objects/Client_Intake__c/fields/BUS_Create_People_Involved_Count__c.field-meta.xml
<CustomField>
    <fullName>BUS_Create_People_Involved_Count__c</fullName>
    <label>BUS: Creation - How Many People...</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>