force-app/main/default/objects/Client_Intake__c/fields/BUS_Dissolve_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>BUS_Dissolve_Business_Name__c</fullName>
    <label>BUS: Dissolution - Name of Your Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>