force-app/main/default/objects/Client_Intake__c/fields/BUS_Dissolve_People_Involved_Count__c.field-meta.xml
<CustomField>
    <fullName>BUS_Dissolve_People_Involved_Count__c</fullName>
    <label>BUS: Dissolution - How Many People...</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>