force-app/main/default/objects/Client_Intake__c/fields/BUS_Dissolve_Reason__c.field-meta.xml
<CustomField>
    <fullName>BUS_Dissolve_Reason__c</fullName>
    <label>BUS: Dissolution - Why Dissolving</label>
    <type>TextArea</type>
</CustomField>