force-app/main/default/objects/Client_Intake__c/fields/BUS_Doc_Review_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>BUS_Doc_Review_Page_Count__c</fullName>
    <label>BUS: Document Review - How Long are...</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>