force-app/main/default/objects/Client_Intake__c/fields/BUS_Doc_Review_Types__c.field-meta.xml
<CustomField>
    <fullName>BUS_Doc_Review_Types__c</fullName>
    <label>BUS: Document Review - Types of...</label>
    <type>TextArea</type>
</CustomField>