force-app/main/default/objects/Client_Intake__c/fields/BUS_Gen_Contract_Review_Contracts__c.field-meta.xml
<CustomField>
    <fullName>BUS_Gen_Contract_Review_Contracts__c</fullName>
    <label>BUS: General Contract Review -...</label>
    <type>TextArea</type>
</CustomField>