force-app/main/default/objects/Client_Intake__c/fields/BUS_Gen_Contract_Review_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>BUS_Gen_Contract_Review_Page_Count__c</fullName>
    <label>BUS: General Contract Review - How...</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>