force-app/main/default/objects/Client_Intake__c/fields/BUS_Partner_Dispute_Assistance__c.field-meta.xml
<CustomField>
    <fullName>BUS_Partner_Dispute_Assistance__c</fullName>
    <label>BUS: Partner Dispute - Specific...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demand letter</fullName>
            </value>
            <value>
                <fullName>Substantial document review and correspondence/negotiation</fullName>
            </value>
            <value>
                <fullName>Lawsuit assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>