force-app/main/default/objects/Client_Intake__c/fields/BUS_Partner_Dispute_Docs_To_Review__c.field-meta.xml
<CustomField>
    <fullName>BUS_Partner_Dispute_Docs_To_Review__c</fullName>
    <label>BUS: Partner Dispute - Documents to...</label>
    <type>TextArea</type>
</CustomField>