force-app/main/default/objects/Client_Intake__c/fields/BUS_Partner_Dispute_Has_Gov_Doc__c.field-meta.xml
<CustomField>
    <fullName>BUS_Partner_Dispute_Has_Gov_Doc__c</fullName>
    <label>BUS: Partner Dispute - Signed...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>