force-app/main/default/objects/Client_Intake__c/fields/BUS_Purchase_Or_Sale__c.field-meta.xml
<CustomField>
    <fullName>BUS_Purchase_Or_Sale__c</fullName>
    <label>BUS: Purchase/Sale - Purchasing or...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>