force-app/main/default/objects/Client_Intake__c/fields/BUS_Purchase_Sale_Business_Name_Type__c.field-meta.xml
<CustomField>
    <fullName>BUS_Purchase_Sale_Business_Name_Type__c</fullName>
    <label>BUS: Purchase/Sale - Business Name/Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>