force-app/main/default/objects/Client_Intake__c/fields/BUS_Purchase_Sale_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>BUS_Purchase_Sale_Contract_Status__c</fullName>
    <label>BUS: Purchase/Sale - Contract...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>