force-app/main/default/objects/Client_Intake__c/fields/BUS_Purchase_Sale_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>BUS_Purchase_Sale_Inclusions__c</fullName>
    <label>BUS: Purchase/Sale - What&apos;s Included...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client list</fullName>
            </value>
            <value>
                <fullName>Equipment/office furnishings</fullName>
            </value>
            <value>
                <fullName>Lease take-over</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>