force-app/main/default/objects/Client_Intake__c/fields/BUS_Purchase_Sale_Inclusions_Other__c.field-meta.xml
<CustomField>
    <fullName>BUS_Purchase_Sale_Inclusions_Other__c</fullName>
    <label>BUS: Purchase/Sale - Inclusions...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>