force-app/main/default/objects/Client_Intake__c/fields/BUS_Purchase_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>BUS_Purchase_Sale_Price__c</fullName>
    <label>BUS: Purchase/Sale - Contemplated...</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>