force-app/main/default/objects/Client_Intake__c/fields/CL_Agency_Police_Specify__c.field-meta.xml
<CustomField>
    <fullName>CL_Agency_Police_Specify__c</fullName>
    <label>CL: Agency Police Dept (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>