force-app/main/default/objects/Client_Intake__c/fields/CL_Case_Involvement_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>CL_Case_Involvement_Other_Specify__c</fullName>
    <label>CL: Case Involvement Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>