force-app/main/default/objects/Client_Intake__c/fields/CL_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>CL_Case_Status__c</fullName>
    <label>CL: Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Charges</fullName>
            </value>
            <value>
                <fullName>Probation Revocation</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Record Sealing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>