force-app/main/default/objects/Client_Intake__c/fields/CL_Charge_Classification__c.field-meta.xml
<CustomField>
    <fullName>CL_Charge_Classification__c</fullName>
    <label>CL: Charge Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
            <value>
                <fullName>Traffic Infraction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>