force-app/main/default/objects/Client_Intake__c/fields/CL_Charges_Allegations__c.field-meta.xml
<CustomField>
    <fullName>CL_Charges_Allegations__c</fullName>
    <label>CL: Charges or Allegations</label>
    <type>TextArea</type>
</CustomField>