force-app/main/default/objects/Client_Intake__c/fields/CL_Court_Location__c.field-meta.xml
<CustomField>
    <fullName>CL_Court_Location__c</fullName>
    <label>CL: Court Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>