force-app/main/default/objects/Client_Intake__c/fields/CL_DUI_Prior_Convictions_Details__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Prior_Convictions_Details__c</fullName>
    <label>CL: DUI - Prior Convictions Details</label>
    <type>TextArea</type>
</CustomField>