force-app/main/default/objects/Client_Intake__c/fields/CL_DUI_Pulled_Over_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Pulled_Over_Other_Specify__c</fullName>
    <label>CL: DUI - Pulled Over Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>