force-app/main/default/objects/Client_Intake__c/fields/CL_DUI_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Test_Results__c</fullName>
    <label>CL: DUI - Test Results</label>
    <type>TextArea</type>
</CustomField>