force-app/main/default/objects/Client_Intake__c/fields/CL_DUI_Tests_Conducted__c.field-meta.xml
<CustomField>
    <fullName>CL_DUI_Tests_Conducted__c</fullName>
    <label>CL: DUI - Tests Conducted</label>
    <type>TextArea</type>
</CustomField>