force-app/main/default/objects/Client_Intake__c/fields/CL_In_Custody__c.field-meta.xml
<CustomField>
    <fullName>CL_In_Custody__c</fullName>
    <label>CL: Currently in Custody?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>