force-app/main/default/objects/Client_Intake__c/fields/CL_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Incident_Date__c</fullName>
    <label>CL: Incident Date</label>
    <type>Date</type>
</CustomField>