force-app/main/default/objects/Client_Intake__c/fields/CL_Incident_Location_City_County__c.field-meta.xml
<CustomField>
    <fullName>CL_Incident_Location_City_County__c</fullName>
    <label>CL: Incident Location City/County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>