force-app/main/default/objects/Client_Intake__c/fields/CL_Investigating_Agency__c.field-meta.xml
<CustomField>
    <fullName>CL_Investigating_Agency__c</fullName>
    <label>CL: Investigating Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Police Department</fullName>
            </value>
            <value>
                <fullName>District Attorney&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>