force-app/main/default/objects/Client_Intake__c/fields/Client_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Client_State_Province__c</fullName>
    <label>Client State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>