force-app/main/default/objects/Client_Intake__c/fields/Client_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Street_Address__c</fullName>
    <label>Client Street Address</label>
    <type>TextArea</type>
</CustomField>