force-app/main/default/objects/Client_Intake__c/fields/CLIT_Claim_Basis__c.field-meta.xml
<CustomField>
    <fullName>CLIT_Claim_Basis__c</fullName>
    <label>CLIT: Basis for Claim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breach of Contract</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Civil Theft</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>