force-app/main/default/objects/Client_Intake__c/fields/CLIT_Claim_Basis_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>CLIT_Claim_Basis_Other_Specify__c</fullName>
    <label>CLIT: Claim Basis Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>