force-app/main/default/objects/Client_Intake__c/fields/CLIT_Dispute_Nature__c.field-meta.xml
<CustomField>
    <fullName>CLIT_Dispute_Nature__c</fullName>
    <label>CLT: Dispute Nature</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>