force-app/main/default/objects/Client_Intake__c/fields/CLIT_Estimated_Damages_Value__c.field-meta.xml
<CustomField>
    <fullName>CLIT_Estimated_Damages_Value__c</fullName>
    <label>CLIT: Estimated Value of Damages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>