force-app/main/default/objects/Client_Intake__c/fields/CLIT_Lawsuit_Details__c.field-meta.xml
<CustomField>
    <fullName>CLIT_Lawsuit_Details__c</fullName>
    <label>Lawsuit Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>