force-app/main/default/objects/Client_Intake__c/fields/CLIT_Plaintiff_Or_Defendant__c.field-meta.xml
<CustomField>
    <fullName>CLIT_Plaintiff_Or_Defendant__c</fullName>
    <label>CLIT: Are you Plaintiff or Defendant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>