force-app/main/default/objects/Client_Intake__c/fields/CONST_Amount_Paid_To_Contractor__c.field-meta.xml
<CustomField>
    <fullName>CONST_Amount_Paid_To_Contractor__c</fullName>
    <label>CONST: How Much Paid to...</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>