force-app/main/default/objects/Client_Intake__c/fields/CONST_Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>CONST_Construction_Type__c</fullName>
    <label>CONST: Type of Construction Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>