force-app/main/default/objects/Client_Intake__c/fields/CONST_Construction_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>CONST_Construction_Type_Other__c</fullName>
    <label>CONST: Construction Type Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>