force-app/main/default/objects/Client_Intake__c/fields/CONST_Contractor_Refusal_Desc__c.field-meta.xml
<CustomField>
    <fullName>CONST_Contractor_Refusal_Desc__c</fullName>
    <label>CONST: Contractor Refusal/Lack of...</label>
    <type>TextArea</type>
</CustomField>