force-app/main/default/objects/Client_Intake__c/fields/CONST_Contractor_Response__c.field-meta.xml
<CustomField>
    <fullName>CONST_Contractor_Response__c</fullName>
    <label>CONST: Contractor/Subcontractor...</label>
    <type>TextArea</type>
</CustomField>