force-app/main/default/objects/Client_Intake__c/fields/CONST_Defect_Apparent_Date__c.field-meta.xml
<CustomField>
    <fullName>CONST_Defect_Apparent_Date__c</fullName>
    <label>CONST: When Did Defect(s) First...</label>
    <type>Date</type>
</CustomField>