force-app/main/default/objects/Client_Intake__c/fields/CONST_Defect_Severity__c.field-meta.xml
<CustomField>
    <fullName>CONST_Defect_Severity__c</fullName>
    <label>CONST: Severity of Defects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>