force-app/main/default/objects/Client_Intake__c/fields/CONST_Defect_Types__c.field-meta.xml
<CustomField>
    <fullName>CONST_Defect_Types__c</fullName>
    <label>CONST: Type of Defects Identified</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Structural defects</fullName>
            </value>
            <value>
                <fullName>Water damage or leaks</fullName>
            </value>
            <value>
                <fullName>Electrical issues</fullName>
            </value>
            <value>
                <fullName>Plumbing issues</fullName>
            </value>
            <value>
                <fullName>Roofing defects</fullName>
            </value>
            <value>
                <fullName>Poor workmanship</fullName>
            </value>
            <value>
                <fullName>Safety hazards</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>