force-app/main/default/objects/Client_Intake__c/fields/CONST_Defect_Types_Other__c.field-meta.xml
<CustomField>
    <fullName>CONST_Defect_Types_Other__c</fullName>
    <label>CONST: Defect Types Other (Describe)</label>
    <type>TextArea</type>
</CustomField>