force-app/main/default/objects/Client_Intake__c/fields/CONST_Formal_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>CONST_Formal_Contract_Signed__c</fullName>
    <label>CONST: Formal Contract Signed for...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>