force-app/main/default/objects/Client_Intake__c/fields/CONST_Has_Contract_Copy__c.field-meta.xml
<CustomField>
    <fullName>CONST_Has_Contract_Copy__c</fullName>
    <label>CONST: Do You Have Copy of Contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>