force-app/main/default/objects/Client_Intake__c/fields/CONST_Issue_Nature__c.field-meta.xml
<CustomField>
    <fullName>CONST_Issue_Nature__c</fullName>
    <label>CONST: Nature of Construction Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delays in construction timeline</fullName>
            </value>
            <value>
                <fullName>Poor quality of work</fullName>
            </value>
            <value>
                <fullName>Breach of contract</fullName>
            </value>
            <value>
                <fullName>Payment issues</fullName>
            </value>
            <value>
                <fullName>Safety concerns</fullName>
            </value>
            <value>
                <fullName>Building code violations</fullName>
            </value>
            <value>
                <fullName>Permitting issues</fullName>
            </value>
            <value>
                <fullName>Defects in construction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>