force-app/main/default/objects/Client_Intake__c/fields/CONST_Issue_Nature_Other__c.field-meta.xml
<CustomField>
    <fullName>CONST_Issue_Nature_Other__c</fullName>
    <label>CONST: Issue Nature Other (Describe)</label>
    <type>TextArea</type>
</CustomField>