force-app/main/default/objects/Client_Intake__c/fields/CONST_Lawsuit_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CONST_Lawsuit_Case_Number__c</fullName>
    <label>CONST: Lawsuit Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>